src/tui/render/snapshots/asqr__tui__render__screen__tests__a_left_own_answer_row_stays_highlighted_without_notes.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 60, 15)"
---
" asqr · queue: default · 1 session waiting                  "
" name                                                       "
"   ☒ q  ✔ Review                                            "
"────────────────────────────────────────────────────────────"
" Name it                                                    "
" pick one, or type your own                                 "
"                                                            "
"   ( ) 1. asqr                                              "
" ❯ (•) ✎ Own answer: mine                                   "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
" ↑/↓  move   enter  pick   ←/→  question   ?  help   q  quit"
