src/tui/render/snapshots/asqr__tui__render__screen__tests__a_long_session_scrolls_the_list_to_the_current_question.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 80, 20)"
---
" asqr · queue: default · 1 session waiting                                      "
"long                                                                       31/40"
"────────────────────────────────────────────────────────────────────────────────"
"  q17  -                 │ Question 31?                                         "
"  q18  -                 │ type your answer with enter or c                     "
"  q19  -                 │                                                      "
"  q20  -                 │                                                      "
"  q21  -                 │ Answer: —                                            "
"  q22  -                 │ Note: —                                              "
"  q23  -                 │                                                      "
"  q24  -                 │                                                      "
"  q25  -                 │                                                      "
"  q26  -                 │                                                      "
"  q27  -                 │                                                      "
"  q28  -                 │                                                      "
"  q29  -                 │                                                      "
"  q30  -                 │                                                      "
"> q31  -                 │                                                      "
"                                                                                "
" j/k  move   space  select   c  own   n  note   tab  next   S  submit   ?  help "
