src/tui/render/snapshots/asqr__tui__render__screen__tests__a_long_session_scrolls_the_tab_bar_to_the_current_tab.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 80, 16)"
---
" asqr · queue: default · 1 session waiting                                      "
" long                                                                           "
"←  ☐ q27  ☐ q28  ☐ q29  ☐ q30  ☐ q31  ☐ q32  ☐ q33  ☐ q34  ☐ q35  ☐ q36  →      "
"────────────────────────────────────────────────────────────────────────────────"
" Question 31?                                                                   "
" pick one                                                                       "
"                                                                                "
" ❯ ( ) 1. A                                                                     "
"                                                                                "
" Notes: —                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑/↓  move   enter  pick   ←/→  question   n  note   ?  help   q  quit          "
