src/tui/render/snapshots/asqr__tui__render__screen__tests__a_narrow_terminal_wraps_the_descriptions.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app(&[(\"batch\", EXAMPLE)]), 64, 30)"
---
" asqr · queue: default · 1 session waiting                      "
"Alt rework 3, batch 1  (claude-code, torchsnap mascots)  fol 1/3"
"────────────────────────────────────────────────────────────────"
"> 301  -            │ holly-crown-green-robe-feast-ghost: Ghost "
"  extras  default   │ of Christmas Present (A Christmas Carol)  "
"  comment  -        │ pick one, or type your own with c         "
"                    │                                           "
"                    │ › ( ) 1 Old                               "
"                    │         Snappy in holly -- the old line.  "
"                    │   ( ) 2 New 1                             "
"                    │         Snappy in holly -- the first new  "
"                    │         line.                             "
"                    │   ( ) 3 New 2                             "
"                    │         Snappy in holly -- the second new "
"                    │         line.                             "
"                    │   ( ) 4 More                              "
"                    │         None of these; new variations     "
"                    │         next batch.                       "
"                    │                                           "
"                    │ Own line: —                               "
"                    │ Note: —                                   "
"                    │                                           "
"                    │ [image:                                   "
"                    │ /tmp/asqr-example/301-holly-crown-green-r "
"                    │ obe-feast-ghost.png]                      "
"                    │                                           "
"                    │                                           "
"                    │                                           "
"                                                                "
" j/k  move   space  select   c  own   n  note   tab  next   S  s"
