src/tui/render/snapshots/asqr__tui__render__screen__tests__a_notice_shows_in_the_status_line.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 90, 24)"
---
" asqr · queue: default · 1 session waiting                                                "
"Release 0.2.0  (release script)                                                        1/3"
"──────────────────────────────────────────────────────────────────────────────────────────"
"> Go?  -                     │ All checks passed. Publish 0.2.0 now?                      "
"  Channels  default          │ pick one · required                                        "
"  Highlights  -              │                                                            "
"                             │ › ( ) 1 Publish now                                        "
"                             │   ( ) 2 Later                                              "
"                             │         Keep the tag, publish after the weekend.           "
"                             │   ( ) 3 Do not publish                                     "
"                             │         Delete the tag again.                              "
"                             │                                                            "
"                             │ Note: —                                                    "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"                             │                                                            "
"batch-01 collided with an unread result and was archived                                  "
" j/k  move   space  select   c  own   n  note   tab  next   S  submit   ?  help   q  quit "
