src/tui/render/snapshots/asqr__tui__render__screen__tests__a_one_line_field_with_a_length_shows_its_counter.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 100, 24)"
---
" asqr · queue: default · 1 session waiting                                                          "
" Alt rework 3, batch 1  (claude-code, torchsnap mascots)  follows: alt-rework-3-batch-00            "
"   ☒ 301  ☒ extras  ☐ comment  ✔ Review                                                             "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
" holly-crown-green-robe-feast-ghost: Ghost of Christmas Present (A Christmas Carol)                 "
" pick one, or type your own                                                                         "
"                                                                                                    "
"   ( ) 1. Old    Snappy in holly -- the old line.                                                   "
"   ( ) 2. New 1  Snappy in holly -- the first new line.                                             "
"   ( ) 3. New 2  Snappy in holly -- the second new line.                                            "
"   ( ) 4. More   None of these; new variations next batch.                                          "
" ❯ (•) ✎ Own line: Snappy in holly                                                           15/125 "
"                                                                                                    "
" Notes: —                                                                                           "
"                                                                                                    "
"                                                                                                    "
" image not shown                                                                                    "
" /tmp/asqr-example/301-holly-crown-green-robe-feast-ghost.png                                       "
" No such file or directory (os error 2)                                                             "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
" enter  pick   ↑/↓  leave   esc  stop typing                                                        "
