src/tui/render/snapshots/asqr__tui__render__screen__tests__a_small_terminal_says_what_it_needs.snap
---
source: src/tui/render/screen.rs
expression: "screen(&App::default(), 40, 10)"
---
"asqr needs at least 60×15; this terminal"
"is 40×10.                               "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
