src/tui/render/snapshots/asqr__tui__render__screen__tests__a_text_answer_shows_its_lines_and_the_counter.snap
---
source: src/tui/render/screen.rs
expression: "screen(&app, 80, 24)"
---
" asqr · queue: default · 1 session waiting                                      "
" Release 0.2.0  (release script)                                                "
"   ☐ Go?  ☒ Channels  ☒ Highlights  ✔ Review                                    "
"────────────────────────────────────────────────────────────────────────────────"
" One sentence for the release notes:                                            "
" type your answer                                                               "
"                                                                                "
" ❯ ✎ Ship the queue watcher                                                     "
"     and the new format.                                                        "
"                                                                         42/120 "
"                                                                                "
" Notes: —                                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ctrl-j  new line   enter  next   esc  stop typing                              "
